fixing navigation IOS issues

--- a/src/index.css
+++ b/src/index.css
@@ -138,6 +138,11 @@ body {
         width: 100%;
         overflow-x: auto;
         -webkit-overflow-scrolling: touch;
+        scrollbar-width: none;
+    }
+    
+    .e-nav::-webkit-scrollbar {
+        display: none;
     }
   .seo-nav-tab {
     height: 65px;
